src/test/ui/generator/pattern-borrow.nll.stderr
error: compilation successful
  --> $DIR/pattern-borrow.rs:15:1
   |
LL | fn main() { #![rustc_error] } // rust-lang/rust#49855
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

